<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logostartscreentransperent" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="BottomAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/home"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_round_home_24">

            </TextView>

            <TextView
                android:id="@+id/profile_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/profile"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_round_person_24">

            </TextView>

            <TextView
                android:id="@+id/explore_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/explore"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_baseline_search_24">

            </TextView>

            <TextView
                android:id="@+id/upload_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/upload"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_baseline_add_a_photo_24">

            </TextView>

        </LinearLayout>


    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.constraintlayout.widget.ConstraintLayout>