<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".explore.ExploreActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".explore.MapsActivity" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/home"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_round_home_24">

            </TextView>

            <TextView
                android:id="@+id/profile_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/profile"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_round_person_24">

            </TextView>

            <TextView
                android:id="@+id/explore_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/explore"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_baseline_search_24">

            </TextView>

            <TextView
                android:id="@+id/upload_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/upload"
                android:textColor="#FFFFFF"
                app:drawableTopCompat="@drawable/ic_baseline_add_a_photo_24">

            </TextView>

        </LinearLayout>


    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_gravity="bottom|center">

        <Button
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Image View"
            android:textColor="@color/colorBlack"
            style="?attr/materialButtonOutlinedStyle"/>
        <Button
            android:id="@+id/map_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Map View"
            android:textColor="@color/colorPrimaryDark"
            app:strokeColor="@color/colorPrimaryDark"
            style="?attr/materialButtonOutlinedStyle"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>


</androidx.coordinatorlayout.widget.CoordinatorLayout>